# shadowcalib

./: CMakeLists.txt  LICENSE  package.xml
calibration/camera/: creative_webcam.yaml  front_logitech_webcam.yaml  left_logitech_webcam.yaml  logitech_extrinsics.json
include/: aruco_tf.hpp  prettyprint.hpp
launch/: extrinsic_calibration.launch
src/: aruco_tf.cpp
